--- a/404.html
+++ b/404.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/mydata/_nuxt/entry.9ycktCbN.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/mydata/_nuxt/DMMnLeuE.js">
-<link rel="modulepreload" as="script" crossorigin href="/mydata/_nuxt/duckdb-browser-mvp.worker.CM-L3bpJ.js">
-<link rel="modulepreload" as="script" crossorigin href="/mydata/_nuxt/duckdb-browser-eh.worker.D6ypKDsm.js">
-<link rel="prefetch" href="/mydata/_nuxt/duckdb-mvp.DuKjbjvP.wasm">
-<link rel="prefetch" href="/mydata/_nuxt/duckdb-eh.DrTJ_0hP.wasm">
-<link rel="prefetch" as="style" crossorigin href="/mydata/_nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="/mydata/_nuxt/CILeFq8h.js">
-<link rel="prefetch" as="script" crossorigin href="/mydata/_nuxt/DBVQxLPs.js">
-<link rel="prefetch" as="style" crossorigin href="/mydata/_nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="/mydata/_nuxt/Dq-jt3_g.js">
-<script type="module" src="/mydata/_nuxt/DMMnLeuE.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1731919983465,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/mydata/",buildId:"8ac6828b-b1d4-4922-b150-a66872f8c926",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="stylesheet" href="/_nuxt/entry.BQHI3WQK.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DBHeVDbQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/duckdb-browser-mvp.worker.CM-L3bpJ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/duckdb-browser-eh.worker.D6ypKDsm.js">
+<link rel="prefetch" href="/_nuxt/duckdb-mvp.DuKjbjvP.wasm">
+<link rel="prefetch" href="/_nuxt/duckdb-eh.DrTJ_0hP.wasm">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CoZKRZXM.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CEPaDGb6.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.D6506J9O.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/RDVuylwJ.js">
+<script type="module" src="/_nuxt/DBHeVDbQ.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1732123673656,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"092babe4-cb80-4d90-a2df-eb45720fd313",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
